# ai-ewg

./: .dockerignore  .gitignore  CORRECTION_SYSTEM_IMPLEMENTATION.md  Dockerfile  GETTING_STARTED.md  INSTALLATION_CHECKLIST.md  MIGRATION_GUIDE.md  MULTILINGUAL_IMPLEMENTATION_SUMMARY.md  NAMING_FIX_APPLIED.md  NAMING_INTEGRATION_COMPLETE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  RESTART_INSTRUCTIONS.md  ROADMAP.md  ROOT_FILES_GUIDE.md  SQLITE_FIXES_SUMMARY.md  SUBPROCESS_PYTHON_FIX.md  SYSTEM_OVERVIEW.md  UPGRADE_SUMMARY.md  check_episode.py  cleanup_root.ps1  clear_all_data.ps1  clear_all_data_complete.py  complete_reset_with_stop.ps1  dashboard.py  process_all_videos.py  process_episode.py  pyproject.toml  pytest.ini  requirements-api.txt  requirements-cli.txt  requirements-dev.txt  requirements.txt  setup_input_structure.ps1  start-api-server.ps1  test_clip_render.py  test_intelligent_crop_sample.py  test_multilingual.py  test_naming_service.py
.github/workflows/: ci.yml
.streamlit/: config.toml
components/: __init__.py  clips.py  corrections.py  outputs.py  processing.py  show_config.py  social_generator.py  social_validator.py
config/: .env.example  .env.template  README_n8n_all_in_one.txt  clip_generation_example.yaml  n8n_workflow_ai_ready.json  n8n_workflow_all_in_one.json  pipeline.yaml  requirements.txt  show_mappings.json  social_profiles.yaml  system.yaml.example  users.yaml
docs/: ASYNC_WORKFLOW_GUIDE.md  CACHE_CLEARING_SOLUTION.md  CI_CD_GUIDE.md  CLEANUP_MECHANISM.md  CLIPS_ALIGNMENT_SUMMARY.md  COMPREHENSIVE_CLEANUP_SOLUTION.md  CONTENT_VERIFICATION_PLAN.md  DATABASE_PATH_MIGRATION_SUMMARY.md  DEDUPLICATION_SYSTEM.md  DOCUMENTATION_SUMMARY.md  DRY_RUN_SETUP_CHECKLIST.md  HYBRID_WORKFLOW_IMPLEMENTATION.md  INDEX.md  INTELLIGENCE_CHAIN_V2.md  INTELLIGENT_CROP.md  MULTILINGUAL_SUPPORT.md  N8N_INTEGRATION_GUIDE.md  N8N_WORKFLOW_FIX.md  NAMING_INTEGRATION_PLAN.md  NAMING_SYSTEM.md  OUTPUT_SPECS.md  PATH_NORMALIZATION.md  PIPELINE_OUTPUTS.md  POSTGRES_MIGRATION.md  QUICKSTART_CLI.md  QUICK_STATUS.md  README.md  RESUME_RECOVERY_SYSTEM.md  SELF_LEARNING_CORRECTION_SYSTEM.md  SOCIAL_PUBLISHING_IMPLEMENTATION.md  SOCIAL_PUBLISHING_ROADMAP.md  SQLITE_LOCKING_FIXES.md  STREAMLIT_API_FIX.md  STUCK_PROCESS_RECOVERY.md  SYSTEM_OVERVIEW.md  WORKFLOW_ANALYSIS_REPORT.md
examples/: complete_publishing_workflow.py  metadata_search_examples.py  test_intelligence_chain_v2.py
n8n_workflows/: SYNCHRONOUS_WORKFLOW_README.md  WORKFLOW_V3_CHANGELOG.md  configurable_processing.json  configurable_processing_v2.json
pages/: job_monitor.py
scripts/: check_clips_schema.py  checkpoint-wal.py  cleanup_data_folder.ps1  diagnose-db-lock.py  diagnose_clip_discovery.py  diagnose_clip_discovery_fixed.py  discover_videos.ps1  discover_videos.py  enable-wal-mode.py  export-db-to-sheets.py  fix-db-locks.ps1  generate-html-ai.ps1  generate-html.ps1  install-gpu.ps1  migrate_clip_paths.py  migrate_clips_to_new_location.ps1  reset_database.ps1  run_intelligence_chain.py  setup-system.ps1  test-gpu.ps1  test-video.ps1  test_api_request.ps1  test_folder_processing.py  test_process_episode.ps1
src/: __init__.py  cli.py
templates/: base.html  episode.html  person_profile.html  show_index.html
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_all_components.py  test_analytics_tracker.py  test_cdn_manager.py  test_cli.py  test_content_registry.py  test_core_setup.py  test_database_registry.py  test_discovery_engine.py  test_editorial_layer.py  test_error_handling.py  test_feed_generator.py  test_imports.py  test_index_builder.py  test_integration.py  test_intelligence_chain.py  test_intelligent_crop.py  test_mini.py  test_publishing_models.py  test_registry.py  test_reliability_features.py  test_setup.py  test_structured_data_contract.py  test_transcription_engine.py  test_transcription_quality.py  test_web_generator.py
utils/: README.md  __init__.py  api_client.py  diarize.py  disambiguate.py  error_handler.py  error_reporter.py  extract_entities.py  file_manager.py  find_cudnn.py  helpers.py  score_people.py  test_enrichment_pipeline.py  verify-gpu.py  verify_enrichment_setup.py
(+128 files in other folders)
